--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header>
         <ul id="main-menu-wrapper"  class="align-center uppercase">
             <li>
-                <a href="">Buttons</a>
+                <a href="https://lenafaure.github.io/web-components/components/buttons/">Buttons</a>
             </li>
             <li>
                 <a href="profile-card/profile-card.html">Sidebar</a>
