--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <a href="profile-card/profile-card.html">Sidebar</a>
             </li>
             <li>
-                <a href="forms/signup-form.html">Forms</a>
+                <a href="https://lenafaure.github.io/forms/forms/signup-form.html">Forms</a>
             </li>
             <li>
                 <a href="calculator/calculator.html">Calculator</a>
