--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <a href="https://lenafaure.github.io/web-components/components/buttons/">Buttons</a>
             </li>
             <li>
-                <a href="profile-card/profile-card.html">Sidebar</a>
+                <a href="https://lenafaure.github.io/profile-card/profile-card.html">Sidebar</a>
             </li>
             <li>
                 <a href="https://lenafaure.github.io/forms/forms/signup-form.html">Forms</a>
