--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <a href="calculator/calculator.html">Calculator</a>
             </li>
             <li>
-                <a href="product-listing/product-listing.html">Product Listing</a>
+                <a href="https://lenafaure.github.io/product-listing/product-listing.html">Product Listing</a>
             </li>
         </ul>
     </header>
