--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <a href="https://lenafaure.github.io/forms/forms/signup-form.html">Forms</a>
             </li>
             <li>
-                <a href="calculator/calculator.html">Calculator</a>
+                <a href="https://lenafaure.github.io/calculator/calculator.html">Calculator</a>
             </li>
             <li>
                 <a href="https://lenafaure.github.io/product-listing/product-listing.html">Product Listing</a>
